--- a/posts/2022-11-05-Cleaning-Strava-data-with-Kalman-smoothers.ipynb
+++ b/posts/2022-11-05-Cleaning-Strava-data-with-Kalman-smoothers.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "aliases:\n",
-    "- /2022/11/05/Cleaning-Strava-data-with-Kalman-filters\n",
+    "- /2022/11/05/Cleaning-Strava-data-with-Kalman-smoothers\n",
     "author: Yves Barmaz\n",
     "badges: true\n",
     "branch: master\n",
@@ -17,8 +17,8 @@
     "- satellite navigation\n",
     "date: '2022-11-05'\n",
     "description: A tale of mountain biking, paranormal activity and signal processing.\n",
-    "output-file: 2022-11-05-Cleaning-Strava-data-with-Kalman-filters.html\n",
-    "title: Cleaning Strava data with Kalman filters\n",
+    "output-file: 2022-11-05-Cleaning-Strava-data-with-Kalman-smoothers.html\n",
+    "title: Cleaning Strava data with Kalman smoothers\n",
     "toc: false\n",
     "echo: true\n",
     "\n",
@@ -378,7 +378,7 @@
     "\n",
     "where $H$ is an observation matrix, $c$ a bias term and $\\Sigma_{obs}$ the covariance of the observation process.\n",
     "\n",
-    "With these strong assumptions of normality and linear transformations, the posterior distribution of the latent states given observations can be derived through linear algebra operations. These operations are readily implemented in the [`tfd.LinearGaussianStateSpaceModel` distribution](https://www.tensorflow.org/probability/api_docs/python/tfp/distributions/LinearGaussianStateSpaceModel) in the TensorFlow Probability library. Conveniently, these methods also work if we condition only on a subset of the observations. Which observations should be ignored can be specified with an optional `mask` argument.\n",
+    "With these strong assumptions of normality and linear transformations, the posterior distribution of the latent states given observations can be derived through linear algebra operations. These operations are readily implemented in the [`tfd.LinearGaussianStateSpaceModel` distribution](https://www.tensorflow.org/probability/api_docs/python/tfp/distributions/LinearGaussianStateSpaceModel) in the TensorFlow Probability library. The `forward_filter` method runs a Kalman filter to compute the filtered marginal distribution $P(z_t \\vert x_{1..t})$ conditioned only on past observations, and the `posterior_marginal` method runs a Kalman smoother to compute the filtered marginal distribution $P(z_t \\vert x_{1..T})$ conditioned on the full history of observations, including the future ones. These algorithms are discussed in details in section 8.3 of [Probabilistic Machine Learning: Advanced Topics](https://probml.github.io/pml-book/book2.html). Since we have access to the whole GPS track, we will of course use the Kalman smoother. Conveniently, these methods also work if we condition only on a subset of the observations. Which observations should be ignored can be specified with an optional `mask` argument.\n",
     "\n",
     "The first [example](https://www.tensorflow.org/probability/api_docs/python/tfp/distributions/LinearGaussianStateSpaceModel#examples) in the official TensorFlow Probability documentation is precisely the tracking problem that interests us, where the latent space is the real position and the observation is the noisy measurement. Here we will increase the dimension of the latent space and add a velocity vector $\\mathbf{v}$ and an acceleration vector $\\mathbf{a}$ to the true position $\\mathbf{s} = (latitude, longitude, elevation)$, so that $z = (\\mathbf{s}, \\mathbf{v}, \\mathbf{a})$, and use transitions inspired by classical mechanics,\n",
     "\n",
@@ -523,7 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the trick is to run a first Kalman filter with an observation noise scale parameter that is large enough to identify the individual outliers (while masking the repeated measurements that we already identified), followed by a second one with lower noise while masking the individual outliers in addition to the repeated measurements to infer the true trajectory. The identification of individual outliers after the first filtering can be achieved by measuring the distance between the observations and the posterior mean of the first Kalman filter, and rejecting the observations that are beyond a certain threshold."
+    "So the trick is to run a first Kalman smoother with an observation noise scale parameter that is large enough to identify the individual outliers (while masking the repeated measurements that we already identified), followed by a second one with lower noise while masking the individual outliers in addition to the repeated measurements to infer the true trajectory. The identification of individual outliers after the first smoothing can be achieved by measuring the distance between the observations and the posterior mean of the first Kalman smoother, and rejecting the observations that are beyond a certain threshold."
    ]
   },
   {
@@ -549,7 +549,7 @@
     "\n",
     "distance_mask = delta > threshold\n",
     "\n",
-    "# specify a second Kalman filter with a lower noise parameter\n",
+    "# specify a second Kalman smoother with a lower noise parameter\n",
     "noise_std_2 = .05\n",
     "\n",
     "model2 = tfd.LinearGaussianStateSpaceModel(\n",
@@ -566,7 +566,7 @@
     "  initial_state_prior=tfd.MultivariateNormalDiag(\n",
     "   scale_diag=1e-9 * tf.ones([3*ndims])))\n",
     "\n",
-    "# apply the filter with the combined masks\n",
+    "# apply the smoother with the combined masks\n",
     "corrected_posterior_means, corrected_posterior_covs = (\n",
     "    model2.posterior_marginals(x, mask=frequency_mask+distance_mask))"
    ]
@@ -575,7 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The posterior mean of the second filter produces a clean estimation of the real trajectory, free of any weird spike. As a last step, we can rescale it and plot it on OpenStreetMap to admire the result and think of future bike rides!"
+    "The posterior mean of the second smoother produces a clean estimation of the real trajectory, free of any weird spike. As a last step, we can rescale it and plot it on OpenStreetMap to admire the result and think of future bike rides!"
    ]
   },
   {
