--- a/posts/2022-11-05-Cleaning-Strava-data-with-Kalman-smoothers.ipynb
+++ b/posts/2022-11-05-Cleaning-Strava-data-with-Kalman-smoothers.ipynb
@@ -21,6 +21,9 @@
     "title: Cleaning Strava data with Kalman smoothers\n",
     "toc: false\n",
     "echo: true\n",
+    "comments:\n",
+    "  utterances:\n",
+    "    repo: ybarmaz/blog\n",
     "\n",
     "---\n"
    ]
