--- a/posts/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
+++ b/posts/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
@@ -20,6 +20,9 @@
     "output-file: 2021-01-08-probabilistic assessment-of-safety-underreporting.html\n",
     "title: Probabilistic assessment of safety underreporting\n",
     "toc: false\n",
+    "comments:\n",
+    "  utterances:\n",
+    "    repo: ybarmaz/blog\n",
     "\n",
     "---\n",
     "\n"
@@ -692,7 +695,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -706,7 +709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
