--- a/posts/2021-01-13-Anomaly-detection-in-protocol-deviations.ipynb
+++ b/posts/2021-01-13-Anomaly-detection-in-protocol-deviations.ipynb
@@ -19,6 +19,9 @@
     "output-file: 2021-01-13-anomaly-detection-in-protocol-deviations.html\n",
     "title: Anomaly detection in protocol deviations\n",
     "toc: false\n",
+    "comments:\n",
+    "  utterances:\n",
+    "    repo: ybarmaz/blog\n",
     "\n",
     "---\n",
     "\n"
@@ -57,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Deviations from the approved protocol of a clinical trial are common but need to be reported by investigators to the trial sponsor for review. Failing to do so can put patients at risk and affect the scientific quality of the trial, so detecting protocol deviation underreporting is part of the standard quality assurance activities. Investigator sites that report more deviations than their peers should also raise an alarm as this might indicate underlying quality issues. A statistical tool that quantifies the risk of over- and underreporting of protocol deviations could significantly improve quality activities, much like in the case of [adverse event reporting](https://ybarmaz.github.io/blog/bayesian%20modeling/clinical%20quality/2021/01/08/Probabilistic-assessment-of-safety-underreporting.html).\n",
+    "Deviations from the approved protocol of a clinical trial are common but need to be reported by investigators to the trial sponsor for review. Failing to do so can put patients at risk and affect the scientific quality of the trial, so detecting protocol deviation underreporting is part of the standard quality assurance activities. Investigator sites that report more deviations than their peers should also raise an alarm as this might indicate underlying quality issues. A statistical tool that quantifies the risk of over- and underreporting of protocol deviations could significantly improve quality activities, much like in the case of [adverse event reporting](https://ybarmaz.github.io/blog/posts/2021-01-08-probabilistic%20assessment-of-safety-underreporting.html).\n",
     "\n",
     "The number of protocol deviations $n_{pdevs}$ reported by an investigator site should depend linearly on the number of patients $n_{pats}$ enrolled at that site, as more patients mean more chances of deviations, so these are the minimal attributes that should get collected prior to the analysis. The following table is a sample of the data we will use as an example."
    ]
@@ -866,7 +869,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -880,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
