--- a/posts/2021-02-01-Variational-inference-with-tfp.ipynb
+++ b/posts/2021-02-01-Variational-inference-with-tfp.ipynb
@@ -19,6 +19,9 @@
     "output-file: 2021-02-01-variational-inference-with-tfp.html\n",
     "title: Variational inference with TensorFlow-Probability\n",
     "toc: false\n",
+    "comments:\n",
+    "  utterances:\n",
+    "    repo: ybarmaz/blog\n",
     "\n",
     "---\n",
     "\n"
@@ -1568,7 +1571,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1582,7 +1585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
