--- a/posts/2021-02-09-Contextual_bandits.ipynb
+++ b/posts/2021-02-09-Contextual_bandits.ipynb
@@ -24,6 +24,9 @@
     "output-file: 2021-02-09-contextual_bandits.html\n",
     "title: Thompson sampling for contextual bandits\n",
     "toc: false\n",
+    "comments:\n",
+    "  utterances:\n",
+    "    repo: ybarmaz/blog\n",
     "\n",
     "---\n",
     "\n"
@@ -50,7 +53,7 @@
     "$$\n",
     "\n",
     "\n",
-    "Unfortunately, there is no immediate congugate prior for this type of likelihood, so we have to rely on numerical methods to estimate the posterior distribution. A previous [blog post](https://ybarmaz.github.io/blog/bayesian%20modeling/variational%20inference/tensorflow-probability/2021/02/01/Variational-inference-with-tfp.html) discussed variational inference as a speedier alternative to MCMC algorithms, and we will see here how we can apply it to the problem of contextual bandits with binary response.\n",
+    "Unfortunately, there is no immediate congugate prior for this type of likelihood, so we have to rely on numerical methods to estimate the posterior distribution. A previous [blog post](https://ybarmaz.github.io/blog/posts/2021-02-01-variational-inference-with-tfp.html) discussed variational inference as a speedier alternative to MCMC algorithms, and we will see here how we can apply it to the problem of contextual bandits with binary response.\n",
     "\n",
     "This problem is relevant in the development of [personalized therapies](https://en.wikipedia.org/wiki/Personalized_medicine), where the actions represent the different treatments under investigation and the contexts $x$ are predictive biomarkers of their response. The goal of a trial would be to estimate the response to each treatment option given biomarkers $x$, and, based on that, to define the best treatment policy. Adaptive randomization through Thompson sampling ensures that more subjects enrolled in the trial get the optimal treatment based on their biomarkers and the knowledge accrued until their randomization, which is certainly more ethical than a randomization independent on the biomarkers.\n",
     "\n",
@@ -237,7 +240,7 @@
    "metadata": {},
    "source": [
     "## Thompson sampling\n",
-    "A Thompson sampler based on a logistic regression can be implemented as a generalization of the probabilistic machine learning model discussed in the [previous post](https://ybarmaz.github.io/blog/bayesian%20modeling/variational%20inference/tensorflow-probability/2021/02/01/Variational-inference-with-tfp.html). It is essentially a single dense variational layer with one unit per arm of the contextual bandit we want to solve. These units are fed into a Bernoulli distribution layer that simulates the pull of each arm.\n",
+    "A Thompson sampler based on a logistic regression can be implemented as a generalization of the probabilistic machine learning model discussed in the [previous post](https://ybarmaz.github.io/blog/posts/2021-02-01-variational-inference-with-tfp.html). It is essentially a single dense variational layer with one unit per arm of the contextual bandit we want to solve. These units are fed into a Bernoulli distribution layer that simulates the pull of each arm.\n",
     "\n",
     "The parameters $\\theta$ of the model are encoded in the `posterior_mean_field` used as a variational family for the dense variational layer, and when we fit the full model to data, it converges to an approximation of the true posterior $P(\\theta \\vert \\left\\lbrace r_i, a_i, x_i\\right\\rbrace_{i})$.\n",
     "\n",
@@ -892,7 +895,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -906,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
