--- a/posts/2021-06-05-Gaussian-random-walks-with-tfp.ipynb
+++ b/posts/2021-06-05-Gaussian-random-walks-with-tfp.ipynb
@@ -21,6 +21,9 @@
     "output-file: 2021-06-05-gaussian-random-walks-with-tfp.html\n",
     "title: Gaussian random walks\n",
     "toc: false\n",
+    "comments:\n",
+    "  utterances:\n",
+    "    repo: ybarmaz/blog\n",
     "\n",
     "---\n",
     "\n"
@@ -414,7 +417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -428,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
