--- a/posts/2021-12-04-Hamiltonian-mechanics-with-JAX.ipynb
+++ b/posts/2021-12-04-Hamiltonian-mechanics-with-JAX.ipynb
@@ -20,6 +20,9 @@
     "output-file: 2021-12-04-hamiltonian-mechanics-with-jax.html\n",
     "title: Hamiltonian mechanics with JAX\n",
     "toc: false\n",
+    "comments:\n",
+    "  utterances:\n",
+    "    repo: ybarmaz/blog\n",
     "\n",
     "---\n",
     "\n"
@@ -411,7 +414,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -425,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
