--- a/posts/2022-11-05-Cleaning-Strava-data-with-Kalman-smoothers.ipynb
+++ b/posts/2022-11-05-Cleaning-Strava-data-with-Kalman-smoothers.ipynb
@@ -32,6 +32,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Note: This is a second version of the article, edited on 2022-11-09, with a better method to reject outliers suggested by Isaac Skog.*\n",
+    "\n",
     "Like many cyclists and mountain bikers, I record and share my rides with [Strava](https://strava.com/). When I use my electric mountain bike, I normally export the relevant data to Strava from the [Bosch eBike Flow app](https://www.bosch-ebike.com/en/products/ebike-flow-app) that controls and monitors the performance of the motor and gets geolocation data from the mobile phone. I noticed that this data is sometimes affected by measurement errors that look like weird spikes on my routes. This is visible on this screenshot of a ride I did in Morgins last summer."
    ]
   },
@@ -526,7 +528,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the trick is to run a first Kalman smoother with an observation noise scale parameter that is large enough to identify the individual outliers (while masking the repeated measurements that we already identified), followed by a second one with lower noise while masking the individual outliers in addition to the repeated measurements to infer the true trajectory. The identification of individual outliers after the first smoothing can be achieved by measuring the distance between the observations and the posterior mean of the first Kalman smoother, and rejecting the observations that are beyond a certain threshold."
+    "So the trick is to run a first Kalman smoother with an observation noise scale parameter that is large enough to identify the individual outliers (while masking the repeated measurements that we already identified), followed by a second one with lower noise while masking the individual outliers in addition to the repeated measurements to infer the true trajectory. For the identification of individual outliers after the first smoothing, we can make use of the posterior marginal distributions $\\mathcal{N}(\\hat\\mu_t, \\hat\\Sigma_t)$ returned by the smoother that should \"explain\" the observation $x_t$ after multiplication by the observation matrix $H$. Concretely, the quantity\n",
+    "\n",
+    "$$Q = \\left(x_t - H\\, \\hat\\mu_t\\right)^T \\, \\left(H \\, \\hat\\Sigma_t \\, H^T \\right)^{-1} \\, \\left(x_t - H\\, \\hat\\mu_t\\right)$$\n",
+    "\n",
+    "should follow a $\\chi^2_3$ distribution under the model assumptions, so we can use a chi-squared test to pick outliers. Note that the threshold of that test has to be set fairly low to catch all outliers, because of the larger noise scale paramter of the first smoother."
    ]
   },
   {
@@ -536,21 +542,18 @@
    "outputs": [],
    "source": [
     "#| code-fold: true\n",
-    "# Compute the distance (Euclidean distance in the space of normalized\n",
-    "# coordinates) and set a mask beyond a threshold of 0.02\n",
+    "# Run a chi^2 test to reject outliers\n",
     "\n",
-    "threshold = 0.02\n",
+    "threshold = 0.01\n",
     "\n",
-    "filtered_lon = posterior_means[:,0]\n",
-    "filtered_lat = posterior_means[:,1]\n",
-    "filtered_elev = posterior_means[:,2]\n",
+    "H = tf.pad(tf.eye(ndims), tf.constant([[0, 0], [0, 2*ndims]]))\n",
+    "S = H @ posterior_covs @ tf.transpose(H)\n",
+    "innovation = x - tf.linalg.matvec(H, posterior_means)\n",
+    "Q = tf.reduce_sum(innovation *\n",
+    "                  tf.linalg.matvec(tf.linalg.inv(S), innovation), axis=1)\n",
     "\n",
-    "delta = np.sqrt((route_df['norm_lon'] - filtered_lon)**2\n",
-    "                +(route_df['norm_lat'] - filtered_lat)**2\n",
-    "                +(route_df['norm_elev'] - filtered_elev)**2\n",
-    "               )\n",
-    "\n",
-    "distance_mask = delta > threshold\n",
+    "chi2_score = tfd.Chi2(3).cdf(Q)\n",
+    "chi2_mask = chi2_score>threshold\n",
     "\n",
     "# specify a second Kalman smoother with a lower noise parameter\n",
     "noise_std_2 = .05\n",
@@ -571,7 +574,7 @@
     "\n",
     "# apply the smoother with the combined masks\n",
     "corrected_posterior_means, corrected_posterior_covs = (\n",
-    "    model2.posterior_marginals(x, mask=frequency_mask+distance_mask))"
+    "    model2.posterior_marginals(x, mask=tf.math.logical_or(frequency_mask, chi2_mask)))"
    ]
   },
   {
@@ -601,7 +604,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x171dcbc70>"
+       "<IPython.lib.display.IFrame at 0x179da0c70>"
       ]
      },
      "execution_count": 10,
@@ -633,7 +636,7 @@
    "metadata": {},
    "source": [
     "## Acknowledgement\n",
-    "I would like to thank Maxime Baillifard for showing me his hometrails around Morgins, an area that seems to affect GPS signals like the Bermuda Triangle, and Yannick Stebler for providing a rational explanation about signals bouncing on cliffs that debunked that myth."
+    "I would like to thank Maxime Baillifard for showing me his hometrails around Morgins, an area that seems to affect GPS signals like the Bermuda Triangle, Yannick Stebler for providing a rational explanation about signals bouncing on cliffs that debunked that myth, and Isaac Skog for suggesting to use a chi-squared test to reject outliers after reading a first version of this article that was using a less robust quadratic form."
    ]
   },
   {
