--- a/posts/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
+++ b/posts/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
@@ -179,20 +179,20 @@
     "\n",
     "unique_sites, sites_idx, sites_counts = tf.unique_with_counts(sites)\n",
     "\n",
-    "ae_per_site = tf.RaggedTensor.from_value_rowids(\n",
-    "    values=observed_ae,\n",
-    "    value_rowids=sites_idx)\n",
-    "\n",
     "mdl_ae = tfd.JointDistributionSequential([\n",
     "    #alpha\n",
     "    tfd.Gamma(1, 1, name='alpha'),\n",
     "    #beta\n",
     "    tfd.Gamma(1, 10, name='beta'),\n",
     "    #Poisson rates for each sites\n",
-    "    lambda beta, alpha: tfd.Sample(tfd.Gamma(alpha, beta), sample_shape=unique_sites.shape, name='rates'),\n",
+    "    lambda beta, alpha: tfd.Sample(tfd.Gamma(alpha, beta),\n",
+    "                                   sample_shape=unique_sites.shape,\n",
+    "                                   name='rates'),\n",
     "    #observed AEs\n",
     "    lambda rates: tfd.Independent(\n",
-    "        tfd.Poisson(tf.gather(rates, sites_idx, axis=-1)), reinterpreted_batch_ndims=1, name='observations')\n",
+    "        tfd.Poisson(tf.gather(rates, sites_idx, axis=-1)),\n",
+    "        reinterpreted_batch_ndims=1,\n",
+    "        name='observations')\n",
     "])"
    ]
   },
