--- a/posts/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
+++ b/posts/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
@@ -184,7 +184,7 @@
     "    tfd.Gamma(1, 1, name='alpha'),\n",
     "    #beta\n",
     "    tfd.Gamma(1, 10, name='beta'),\n",
-    "    #Poisson rates for each sites\n",
+    "    #Poisson rates for all sites\n",
     "    lambda beta, alpha: tfd.Sample(tfd.Gamma(alpha, beta),\n",
     "                                   sample_shape=unique_sites.shape,\n",
     "                                   name='rates'),\n",
