--- a/posts/2023-11-12-Masked-autoregressive-flows-for-stochastic-differential-equations.ipynb
+++ b/posts/2023-11-12-Masked-autoregressive-flows-for-stochastic-differential-equations.ipynb
@@ -15,7 +15,7 @@
     "- tensorflow-probability\n",
     "- machine learning\n",
     "date: '2023-11-12'\n",
-    "description: Some applications of differentiable programming in data science beyond the usual machine learning algorithms, with an example in drug development valuation.\n",
+    "description: Common methods for solving SDEs are discussed.\n",
     "output-file: 2023-11-12-Masked-autoregressive-flows-for-stochastic-differential-equations.html\n",
     "title: \"Masked autoregressive flows for stochastic differential equations\"\n",
     "toc: false\n",
@@ -165,12 +165,12 @@
     "\n",
     "These PDEs are usually solved numerically. This can be difficult when $\\mu(X, t)$ renders the equation stiff (this happens often in models of noisy electric circuits used for biophysical measurements) or in high-dimensional problems (for instance joint distributions of stock prices in large markets).\n",
     "\n",
-    "A limitation of this modelling approach is the difficulty to sample from a distribution given by its probability density function. This requires specialized algorithms, so in practice it is probably better to rely on Euler-Maruyama methods for sampling, and Fokker-Planck equations for density evaluation.\n",
+    "A limitation of this modelling approach is the difficulty to sample from a distribution given by its probability density function. This requires specialized algorithms, so in practice it is probably better to rely on Euler-Maruyama methods for sampling, and Fokker-Planck equations for density evaluation. Furthermore, the log-densities should be compatible with automatic differentiation to be useful in probabilistic inference algorithms, which is not always straightforward with PDE solvers.\n",
     "\n",
     "## Probabilistic machine learning\n",
-    "Probabilistic machine learning provides a third approach, where one gets a model that can both evaluate densitities and generate new samples. The idea is to first generate training data with the Euler-Maruyama method, and then use machine learning to fit a probability distribution parameterized by a neural network to this synthetic data through conditional density estimation. This distribution should both be easy to sample from and have a density that can be evaluated easily.\n",
+    "Probabilistic machine learning provides a third approach, where one gets a model that can both generate new samples and evaluate densities in an a framework supporting automatic differentiation. The idea is to first generate training data with the Euler-Maruyama method, and then use machine learning to fit a probability distribution parameterized by a neural network to this synthetic data. The training objective is conditional density estimation of the synthetic training data. This distribution should both be convenient to sample from and have a density that can be evaluated easily.\n",
     "\n",
-    "Such distributions can be constructed with [normalizing flows](https://arxiv.org/abs/1705.07057) parameterized by conditional [autoregressive networks](https://arxiv.org/abs/1502.03509). In a nutshell, a normalizing flow deforms a normal distribution into a more generic one through an invertible mapping. This mapping could be implemented as a neural network, provided the network were invertible, and the autoregressive condition imposed by masking certain weights ensures just that."
+    "Such distributions can be constructed with [normalizing flows](https://arxiv.org/abs/1705.07057) parameterized by conditional [autoregressive networks](https://arxiv.org/abs/1502.03509). In a nutshell, a normalizing flow deforms a normal distribution into a more generic one through an invertible mapping. This mapping could be implemented as a neural network, provided the network were invertible, and the autoregressive condition imposed by masking certain weights ensures just that. Moreover, these autoregressive networks can accept conditional variables, so that they can estimate the conditional density $p(x; t)$ if $t$ is passed to the model."
    ]
   },
   {
@@ -256,11 +256,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Here the autoregressive flow was chained with an exponential map to constrain its output to the support of the target distribution, $\\mathbb{R}_{>0}$. Note how the conditional variable $t$ is passed to the `log_prob` method in this case to make sure it ends up in the right neural network."
+   ]
   },
   {
    "cell_type": "code",
@@ -324,6 +324,13 @@
     "    plt.plot(sample_space, dist.prob(sample_space), linewidth=.8)\n",
     "plt.title('True PDF for different values of t')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally one can directly compare these density functions to one another."
    ]
   },
   {
