--- a/posts/2023-11-12-Masked-autoregressive-flows-for-stochastic-differential-equations.ipynb
+++ b/posts/2023-11-12-Masked-autoregressive-flows-for-stochastic-differential-equations.ipynb
@@ -15,7 +15,7 @@
     "- tensorflow-probability\n",
     "- machine learning\n",
     "date: '2023-11-12'\n",
-    "description: Common methods for solving SDEs are discussed.\n",
+    "description: Common methods for solving SDEs are discussed, along with their limitations for solving inference problems. Conditional masked autoregressive flows are presented as a flexible alternative.\n",
     "output-file: 2023-11-12-Masked-autoregressive-flows-for-stochastic-differential-equations.html\n",
     "title: \"Masked autoregressive flows for stochastic differential equations\"\n",
     "toc: false\n",
@@ -75,7 +75,7 @@
     "\n",
     "Solving this SDE means finding the probability distribution of $X_t$ for $t>0$, given the initial distribution of $X_{t=0}$. This can be done by specifying the probability density function (PDF) $p(x; t)$ for $t>0$ given the initial PDF $p(x; t=0)$ (here the semicolon indicates that $x$ is the value realized by the random variable and $t$ the time parameter).\n",
     "\n",
-    "For certain special cases of $\\mu(X, t)$ and $\\sigma(X, t)$, that include Brownian motions (where $\\mu$ and $\\sigma$ are both constant), the solution follows a normal distribution $X_t \\sim \\mathcal{N}(m(t), s(t))$ where the parameters $m(t)$ and $s(t)$ obey certain ordinary differential equations, which can be solved up to any accuracy with standard methods.\n",
+    "For certain special cases of $\\mu(X, t)$ and $\\sigma(X, t)$, that include Brownian motions (where $\\mu$ and $\\sigma$ are both constant), the solution follows a normal distribution $X_t \\sim \\mathcal{N}(m(t), s(t))$ where the parameters $m(t)$ and $s(t)$ obey certain ordinary differential equations, which can be solved with standard methods.\n",
     "\n",
     "## Euler-Maruyama\n",
     "In general, one relies instead on numerical approximations, for instance the [Euler–Maruyama method](https://en.wikipedia.org/wiki/Euler%E2%80%93Maruyama_method) that generates approximated samples of the process $X_t$ at discretized time steps $t_1, \\dots, t_N$,\n",
@@ -144,7 +144,7 @@
     "\\mathbb{E}\\left[f(X_t)\\right] = \\int f(x)\\,p(x; t)\\,\\mathrm{d}x,\n",
     "$$\n",
     "\n",
-    "and these samples are usually good enough to find Monte Carlo estimates\n",
+    "for instance in asset pricing problems, and these samples are usually good enough to find Monte Carlo estimates\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[f(X_t)\\right] \\approx \\sum_k f(\\hat X_{t, k}),\n",
@@ -170,7 +170,7 @@
     "## Probabilistic machine learning\n",
     "Probabilistic machine learning provides a third approach, where one gets a model that can both generate new samples and evaluate densities in an a framework supporting automatic differentiation. The idea is to first generate training data with the Euler-Maruyama method, and then use machine learning to fit a probability distribution parameterized by a neural network to this synthetic data. The training objective is conditional density estimation of the synthetic training data. This distribution should both be convenient to sample from and have a density that can be evaluated easily.\n",
     "\n",
-    "Such distributions can be constructed with [normalizing flows](https://arxiv.org/abs/1705.07057) parameterized by conditional [autoregressive networks](https://arxiv.org/abs/1502.03509). In a nutshell, a normalizing flow deforms a normal distribution into a more generic one through an invertible mapping. This mapping could be implemented as a neural network, provided the network were invertible, and the autoregressive condition imposed by masking certain weights ensures just that. Moreover, these autoregressive networks can accept conditional variables, so that they can estimate the conditional density $p(x; t)$ if $t$ is passed to the model."
+    "Such distributions can be constructed with [normalizing flows](https://arxiv.org/abs/1705.07057) parameterized by conditional [autoregressive networks](https://arxiv.org/abs/1502.03509). In a nutshell, a normalizing flow deforms a normal distribution into a more generic one through an invertible mapping. This mapping can be implemented as a neural network, provided the network is invertible, and the autoregressive condition imposed by masking certain weights ensures just that. Moreover, these autoregressive networks can accept conditional variables, so that they can estimate the conditional density $p(x; t)$ if $t$ is passed to the model as a conditional variable."
    ]
   },
   {
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here the autoregressive flow was chained with an exponential map to constrain its output to the support of the target distribution, $\\mathbb{R}_{>0}$. Note how the conditional variable $t$ is passed to the `log_prob` method in this case to make sure it ends up in the right neural network."
+    "Here the autoregressive flow was chained with an exponential map to constrain its output to the support of the target distribution, $\\mathbb{R}_{>0}$. Note how the conditional variable $t$ is passed to the `log_prob` method in a dictionary of keyword arguments to make sure it ends up in the right neural network."
    ]
   },
   {
@@ -292,10 +292,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These estimated probability density functions can be compared with the true solution\n",
+    "These learned probability density functions can be compared with the true solution\n",
     "\n",
     "$$\n",
-    "X_t = X_0 e^{(\\mu - \\frac{\\sigma^2}{2})t + \\sigma W_t},\n",
+    "X_t = X_0 e^{(\\mu - \\frac{\\sigma^2}{2})t + \\sigma W_t}\n",
     "$$\n",
     "\n",
     "of the geometric Brownian motion SDE, which follows a log-normal distribution. This was the main reason for using this example."
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally one can directly compare these density functions to one another."
+    "In the same plot, one can see they more or less agree."
    ]
   },
   {
@@ -363,11 +363,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Flexible models for complex applications\n",
+    "For the sake of the example, the model presented here only accepted the time as a conditional variable, and the initial value was deterministic. One can of course draw the drift and volatility parameters as well as the initial value from proposal distributions and pass them as further conditional variables to the model in order to learn a parameterized conditional distribution $p(x;t\\vert \\mu, \\sigma, x_0)$. This is particularly useful if the ultimate goal is to perform Bayesian inference of these parameters from experimental data. Or one can learn a transition function $p(x; t\\vert t_0; x_0)$ of a Markov chain if the problem involves discrete observations of an underlying stochastic process.\n",
+    "\n",
+    "Of course, this approach generalizes beyond geometric Brownian motions, and the implementation in TensorFlow makes it easy to run these models on accelerated hardware. I hope this blog post will trigger some ideas!"
+   ]
   },
   {
    "cell_type": "code",
