--- a/about.qmd
+++ b/about.qmd
@@ -19,7 +19,9 @@ about:
 
 ---
 
-My background is in theoretical physics (quantum fields and strings) and I now work as a data scientist in the pharmaceutical industry. I focus mostly on quantitative methods in drug development, optimization of business processes, and recently probabilistic modeling to support the development of next generation nanopore sequencers.
+I am a data scientist at Roche, where I work on large language model applications to accelerate clinical development. I also spent some time in the clinical quality assurance organization, and in the statistical modeling group supporting the development of next generation nanopore sequencers.
+
+My background is in theoretical physics (quantum fields and strings) and I have some experience working in finance.
 
 In my spare time, I enjoy ski touring, mountain biking and cycling, especially in the Swiss Alps where I grew up.
 
