--- a/posts/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
+++ b/posts/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
@@ -13,16 +13,16 @@
     "categories:\n",
     "- bayesian modeling\n",
     "- clinical quality\n",
-    "comments: false\n",
     "date: '2021-01-08'\n",
     "description: Adverse event underreporting is a problem that sometimes affects clinical\n",
     "  trials. Probabilistic programming is the modern way to address this issue.\n",
     "output-file: 2021-01-08-probabilistic assessment-of-safety-underreporting.html\n",
     "title: Probabilistic assessment of safety underreporting\n",
     "toc: false\n",
-    "comments:\n",
-    "  utterances:\n",
-    "    repo: ybarmaz/blog\n",
+    "website:\n",
+    "  comments:\n",
+    "    utterances:\n",
+    "      repo: ybarmaz/blog\n",
     "\n",
     "---\n",
     "\n"
@@ -709,7 +709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
