--- a/posts/2024-03-10-SDE-model-calibration-with-diffrax.ipynb
+++ b/posts/2024-03-10-SDE-model-calibration-with-diffrax.ipynb
@@ -45,8 +45,7 @@
     "\n",
     "The reason for using an integral formula for the parameter calibration rather than Monte Carlo estimates directly is that efficient calibration relies on gradient-based methods, and computing the gradients of Monte Carlo estimates with respect to the model parameters can be difficult. The pain point is the backpropagation of gradients through the numerical integration of the SDE. On the other hand, deriving an integral formula works only for special cases of SDE such as the [Back-Scholes model](https://en.wikipedia.org/wiki/Black%E2%80%93Scholes_model) or the [Heston model](https://en.wikipedia.org/wiki/Heston_model), but is in general cases a very hard problem.\n",
     "\n",
-    "This is where recent developments in the [scalable computation of gradients for SDE](https://arxiv.org/abs/2001.01328) come in handy as they cleverly circumvent that pain point of the backpropagation through integration and make the calibration of arbitrary SDE models possible. They are readily implemented in the [Diffrax](https://docs.kidger.site/diffrax/) library, specifically in various flavors of [adjoints](https://docs.kidger.site/diffrax/api/adjoints/).\n",
-    "\n",
+    "This is where recent numerical integration libraries such as [torchsde](https://github.com/google-research/torchsde) or [Diffrax](https://docs.kidger.site/diffrax/) come in handy as they implement backpropagation through integration with [adjoint methods](https://docs.kidger.site/diffrax/api/adjoints/) and make the calibration of arbitrary SDE models possible.\n",
     "\n",
     "## Heston model\n",
     "As an example, we can consider the Heston model\n",
@@ -59,7 +58,7 @@
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "Specifying its SDE only takes a few lines of code in Diffrax."
+    "Specifying its SDE only takes a few lines of code in Diffrax. Note how the correlation $\\rho$ is introduced as a mixing matrix of two independent Wiener processes."
    ]
   },
   {
@@ -357,14 +356,14 @@
     "opt_state = optimizer.init(params)\n",
     "\n",
     "history = []\n",
-    "mses = []\n",
+    "msres = []\n",
     "\n",
     "for _ in range(300):\n",
     "    value, grads = jax.value_and_grad(compute_loss)(params)\n",
     "    updates, opt_state = optimizer.update(grads, opt_state)\n",
     "    params = optax.apply_updates(params, updates)\n",
     "    history.append(params)\n",
-    "    mses.append(value)"
+    "    msres.append(value)"
    ]
   },
   {
@@ -386,6 +385,7 @@
    ],
    "source": [
     "#| echo: false\n",
+    "plt.plot(msres)\n",
     "plt.xlabel('calibration steps')\n",
     "plt.ylabel('mean squared relative error')\n",
     "plt.title('calibration curve')\n",
@@ -488,8 +488,16 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "This example demonstrated how easy it "
+    "This example demonstrated how easy it is to automatically calibrate an SDE to expected values such as derivative prices in differentiable programming frameworks like JAX or PyTorch. Moreoever, these frameworks natively support hardware acceleration and parallelization, so these workflows can be scaled up with minimal effort. Practioners no longer need to stick to simple models like Black-Scholes, but can quickly experiment with more realistic models that better capture features of the processes they work with."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "552c2f3e-61bb-42c3-bea7-a9cd5d34bdb7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
