--- a/posts/2024-07-07-SDE-model-calibration-through-NPE.ipynb
+++ b/posts/2024-07-07-SDE-model-calibration-through-NPE.ipynb
@@ -47,7 +47,7 @@
     "id": "TcRYKVAqBILu"
    },
    "source": [
-    "# SDE model calibration through neural posterior estimation\n",
+    "## Introduction\n",
     "Last time, I discussed how [the differentiability of JAX programs facilitates model calibration](https://ybarmaz.github.io/blog/posts/2024-03-10-SDE-model-calibration-with-diffrax.html) when calculating derivatives by hand would be extremely tedious, for instance when the model involves the numerical integration of a stochastic differential equation. While this method provides point estimates of the parameters that minimize a given loss function, it does not quantify the uncertainty of those estimates. Getting such error bars is important to assess the quality of the calibration, and to decide whether the model actually explains the observed data. In the example of option pricing, this concretely means that we can detect mispricing for statistical arbitrage purposes.\n",
     "\n",
     "In this post, I will be exploring a machine learning approach to this problem.\n",
@@ -192,6 +192,7 @@
    },
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "from diffrax import (diffeqsolve, ControlTerm, Euler, MultiTerm,\n",
     "ODETerm, SaveAt, VirtualBrownianTree)\n",
     "\n",
@@ -871,7 +872,7 @@
    ],
    "source": [
     "#| echo: false\n",
-    "#| output: false\n",
+    "#| output: true\n",
     "print(jnp.mean(posterior_prices<market_calls[None], axis=0))"
    ]
   },
@@ -892,41 +893,15 @@
     "\n",
     "Thirdly, in situations with sparse data, due to the Bayesian nature of neural posterior estimation, one can introduce prior knowledge about the parameters in the prior distribution, which would regularize the inference even if there weren't enough data points for standard methods.\n",
     "\n",
-    "Lastly, the computationally expensive part of neural posterior estimation is the generation of synthetic data and the learning of the surrogate posterior $q_{nn}(\\theta \\vert X)$, which both can be done in advance, and at inference time, once the data is observed, all that remains to do is to call the autoregressive flow once in parallel to generate a sample of the posterior. This is in general faster than a gradient-descent-based estimation of model parameters.\n",
-    "\n",
-    "\n",
-    "Google Colab notebook\n",
-    "\n",
-    "Further work:\n",
-    "- Learn full joint with the sbi diffuser\n",
-    "- other conditional distribution"
+    "Lastly, the computationally expensive part of neural posterior estimation is the generation of synthetic data and the learning of the surrogate posterior $q_{nn}(\\theta \\vert X)$, which both can be done in advance, and at inference time, once the data is observed, all that remains to do is to call the autoregressive flow once in parallel to generate a sample of the posterior. This is in general faster than a gradient-descent-based estimation of model parameters."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "4HvHsLC470KS"
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "posterior_predictive_prices = vmap(compute_call_price,\n",
-    "                                   in_axes=(None, 0, None, None, None))(\n",
-    "                                       spot_price,\n",
-    "                                       simulated_params,\n",
-    "                                       strikes,\n",
-    "                                       maturities,\n",
-    "                                       data_key)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "1ZPgmzRxoxWT"
-   },
-   "source": [
-    "posterior predictive risk minimization vs. empirical risk minimization"
-   ]
+   "source": []
   }
  ],
  "metadata": {
