--- a/posts/2024-07-07-SDE-model-calibration-through-NPE.ipynb
+++ b/posts/2024-07-07-SDE-model-calibration-through-NPE.ipynb
@@ -425,8 +425,8 @@
     "        tfb.Exp(),\n",
     "        tfb.Identity()]\n",
     "\n",
-    "unconstraining_bij = tfb.Blockwise(bijs, block_sizes=6*[1],\n",
-    "                                   name='unconstraining_bij')\n",
+    "constraining_bij = tfb.Blockwise(bijs, block_sizes=6*[1],\n",
+    "                                   name='constraining_bij')\n",
     "\n",
     "# Name the autoregressive flow to properly pass the\n",
     "# conditional arguments:\n",
@@ -437,7 +437,7 @@
     "parameterized_distribution = tfd.TransformedDistribution(\n",
     "  distribution=tfd.Sample(tfd.Normal(loc=0., scale=1.),\n",
     "                          sample_shape=[6]),\n",
-    "  bijector=tfb.Chain([unconstraining_bij, maf]))"
+    "  bijector=tfb.Chain([constraining_bij, maf]))"
    ]
   },
   {
