--- a/posts/2024-07-07-SDE-model-calibration-through-NPE.ipynb
+++ b/posts/2024-07-07-SDE-model-calibration-through-NPE.ipynb
@@ -21,7 +21,7 @@
     "- machine learning\n",
     "- quantitative finance\n",
     "date: '2024-07-07'\n",
-    "description: Quantifying uncertainty in inverse problems normally requires a statistical model that can be hard to derive. One can learn it from synthetic data in simulation-based inference. Probabilistic programming libraries facilitate that process.\n",
+    "description: Quantifying uncertainty in inverse problems normally requires a statistical model that can be hard to derive. Simulation-based inference offers an alternative approach where the model is learned from synthetic data. Probabilistic programming libraries facilitate that process.\n",
     "output-file: 2024-07-07-SDE-model-calibration-through-NPE.html\n",
     "title: \"SDE model calibration through neural posterior estimation\"\n",
     "toc: false\n",
