--- a/about.qmd
+++ b/about.qmd
@@ -15,11 +15,11 @@ about:
       href: https://github.com/ybarmaz
     - icon: instagram
       text: Instagram
-      href: https://www.instagram.com/naxadventurextreme/
+      href: https://www.instagram.com/yvesbarmaz/
 
 ---
 
-I am a data scientist at Roche, where I work on large language model solutions for clinical development. I also spent some time in the clinical quality assurance organization, and in the statistical modeling group supporting the development of [nanopore sequencers](https://sequencing.roche.com/global/en/home.html).
+I am a machine learning data scientist at Apple, where I work on algorithm evaluation. Before that I was at Roche, building large language model applications for clinical development. I also spent some time in the clinical quality assurance organization, and in the statistical modeling group supporting the development of [nanopore sequencers](https://sequencing.roche.com/global/en/home.html).
 
 My background is in theoretical physics (quantum fields and strings) and I have some experience working in finance.
 
